SERVER-21149 Make sure that ShardRegistry is aware of any node that the RemoteCommandTargeter might give out