src/mongo/s/client/shard_registry.cpp
@@ -325,7 +325,7 @@ void ShardRegistry::_addShard_inlock(const ShardType& shardType) {
 void ShardRegistry::updateLookupMapsForShard(shared_ptr<Shard> shard,
                                              const ConnectionString& newConnString) {
     log() << "Updating ShardRegistry connection string for shard " << shard->getId()
-          << " to: " << newConnString.toString();
+          << " from: " << shard->getConnString().toString() << " to: " << newConnString.toString();
     stdx::lock_guard<stdx::mutex> lk(_mutex);
     _updateLookupMapsForShard_inlock(std::move(shard), newConnString);
 }
